Добавлены interop библиотека в AP.Reports и для нее создан юнит тест с moq

--- a/AP.Reports/packages.config
+++ b/AP.Reports/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Aspose.Cells" version="19.3.0" targetFramework="net45" />
   <package id="BarCode" version="4.0.2.2" targetFramework="net45" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net45" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net45" />
 </packages>
