зменены методы в интерфейса IReport, ITextGraphicsReport

--- a/UnitTest.AP.Reports/UnitTest.AP.Reports.csproj
+++ b/UnitTest.AP.Reports/UnitTest.AP.Reports.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="UtExcelInterop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtWord.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
