--- a/AP.Reports/AP.Reports.csproj
+++ b/AP.Reports/AP.Reports.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,8 +72,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoDocumets\Excel.cs" />
     <Compile Include="AutoDocumets\Word.cs" />
-    <Compile Include="Interface\IGrapsReport.cs" />
+    <Compile Include="Interface\IGraphsReport.cs" />
     <Compile Include="Interface\IReport.cs" />
     <Compile Include="MSInterop\ExcelInterop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
