--- a/AP.Reports/packages.config
+++ b/AP.Reports/packages.config
@@ -7,5 +7,6 @@
   <package id="FastMember" version="1.3.0" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net45" />
+  <package id="Open-Xml-PowerTools" version="4.4.0" targetFramework="net45" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net45" />
 </packages>
