--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataBase">
+      <HintPath>..\ASMC.Data\DataBase.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -43,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClimateModel\Parametr.cs" />
+    <Compile Include="ClimateModel\Room.cs" />
+    <Compile Include="ClimateModel\Sensor.cs" />
     <Compile Include="Interface\IEmployees.cs" />
     <Compile Include="Interface\IMainWindow.cs" />
     <Compile Include="Interface\IParameters.cs" />
@@ -66,6 +72,12 @@
     <Compile Include="Metr\TechnicalCondition.cs" />
     <Compile Include="Metr\TypeMi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MathStatistick\MathStatistic.csproj">
+      <Project>{D24BB8B9-B4A7-4700-A395-189B65559D7E}</Project>
+      <Name>MathStatistic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
