--- a/AP.Utils/packages.config
+++ b/AP.Utils/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.60.6" targetFramework="net451" />
+  <package id="NLog" version="4.6.5" targetFramework="net451" />
+  <package id="NLog.Config" version="4.6.5" targetFramework="net451" />
+  <package id="NLog.Schema" version="4.6.5" targetFramework="net451" />
 </packages>
