--- a/ASMC.Core/packages.config
+++ b/ASMC.Core/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net45" />
   <package id="Fluent.Ribbon" version="6.1.0.326" targetFramework="net45" />
-  <package id="NLog" version="4.6.2" targetFramework="net45" />
+  <package id="NLog" version="4.6.5" targetFramework="net451" />
+  <package id="NLog.Config" version="4.6.5" targetFramework="net451" />
+  <package id="NLog.Schema" version="4.6.5" targetFramework="net451" />
 </packages>
