МЕсс бокс работает всегда. Мапп рабоотает с Null, Load грузит все, что может. Можно передавать параетры в load

--- a/AP.Reports/AP.Reports.csproj
+++ b/AP.Reports/AP.Reports.csproj
@@ -99,6 +99,7 @@
     <Compile Include="AutoDocumets\Excel.cs" />
     <Compile Include="AutoDocumets\OpenExcel.cs" />
     <Compile Include="AutoDocumets\Word.cs" />
+    <Compile Include="Barcode.cs" />
     <Compile Include="Interface\ITextGraphicsReport.cs" />
     <Compile Include="Interface\IReport.cs" />
     <Compile Include="MSInterop\ExcelInterop.cs" />
