--- a/AP.Barcoder/AP.Barcoder.csproj
+++ b/AP.Barcoder/AP.Barcoder.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{81B5A006-AAB3-43B0-B7C1-2E290B87F1BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Barcoder</RootNamespace>
-    <AssemblyName>Barcoder</AssemblyName>
+    <RootNamespace>AP.Barcoder</RootNamespace>
+    <AssemblyName>AP.Barcoder</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -68,6 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
+      <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
+      <Name>AP.Utils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
