--- a/ASMC/ASMC.csproj
+++ b/ASMC/ASMC.csproj
@@ -129,6 +129,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AP.Reports\AP.Reports.csproj">
+      <Project>{630EEDDE-FE14-4BA9-A2DA-7976F9BEE39A}</Project>
+      <Name>AP.Reports</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ASMC.Core\ASMC.Core.csproj">
       <Project>{ADB547EB-33AA-4C07-A493-C80729632A8B}</Project>
       <Name>ASMC.Core</Name>
