--- a/AP.Reports/AP.Reports.csproj
+++ b/AP.Reports/AP.Reports.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ConditionalFormatting.cs" />
     <Compile Include="Utils\Exceptions.cs" />
+    <Compile Include="Utils\FromFormatToStringConverter.cs" />
     <Compile Include="Utils\UtilsExcel.cs" />
   </ItemGroup>
   <ItemGroup>
