--- a/AP.Reports/AP.Reports.csproj
+++ b/AP.Reports/AP.Reports.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Interface\IReport.cs" />
     <Compile Include="MSInterop\ExcelInterop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\EnumAttribute.cs" />
     <Compile Include="Utils\Exceptions.cs" />
     <Compile Include="Utils\FromFormatToStringConverter.cs" />
     <Compile Include="Utils\UtilsExcel.cs" />
@@ -126,16 +127,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\ASU MS 7\dev\Palsys.Data.Model\Palsys.Data.Model.csproj">
-      <Project>{0ed73fcc-a223-4a57-8089-295f77c5e355}</Project>
-      <Name>Palsys.Data.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
-      <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
-      <Name>AP.Utils</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
