--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -80,12 +80,21 @@
     <Compile Include="Behavior\BindableSelectedItemBeheavior.cs" />
     <Compile Include="Behavior\IsFocesedUI.cs" />
     <Compile Include="Exceptions.cs" />
+    <Compile Include="IFormService.cs" />
+    <Compile Include="ISupportClose.cs" />
+    <Compile Include="ISupportDialog.cs" />
+    <Compile Include="Keys.cs" />
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\IWindowSettings.cs" />
     <Compile Include="Settings\SettingsSelector.cs" />
     <Compile Include="Settings\WindowSettingsBase.cs" />
+    <Compile Include="UI\FormServiceBase.cs" />
+    <Compile Include="UI\WindowAttachedProperties.cs" />
+    <Compile Include="UI\WindowService.cs" />
     <Compile Include="ValidationRules\Rules.cs" />
+    <Compile Include="ViewExtensions.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\ReadAndWriteTextVM.cs" />
     <Compile Include="ViewModel\WorkViewMOdel.cs" />
